# cpp-wasm-template

./: .gitignore  CMakeLists.txt  README.md  build-extension.sh  build.sh  default.nix  shell.nix
.cache/clangd/index/: hello.cpp.B2D90D4BDE5BC13F.idx  html_parser.cpp.49F50DB47C792343.idx
extension/: background.js  content.js  hello.js  hello.wasm  irish_parser.js  irish_parser.wasm  manifest.json  popup.html  popup.js  tooltip.css
include/: emscripten  system
src/: hello.cpp  html_parser.cpp
web/: index.html
